# nl2sql

./: .gitignore  LICENSE  README.md  pyproject.toml  spec.md
docs/: index.html
examples/: livesqlbench-sample.jsonl  quickstart.py
reports/sample-eval/: report.html  report.json
src/nl2sql/: __init__.py  agent.py  core.py  exceptions.py  feedback.py  hints.py  prompts.py  safety.py  tools.py  types.py
src/nl2sql/cli/: __init__.py  app.py  ask.py  config.py  eval_cmd.py  feedback_cmd.py  hints_cmd.py  init.py  inspect.py  render.py  repl.py
src/nl2sql/db/: __init__.py  base.py  postgres.py  sqlite.py
src/nl2sql/eval/: __init__.py  harness.py  livesqlbench.py  matching.py
src/nl2sql/llm/: __init__.py  anthropic.py  base.py  openai.py
tests/: conftest.py  test_agent.py  test_cli.py  test_db_sqlite.py  test_feedback.py  test_hints.py  test_llm_adapters.py  test_prompts.py  test_safety.py  test_tools.py
