[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2sql"
version = "0.1.0"
description = "Natural-language-to-SQL agent loop with schema and execution tools, hints, feedback store, and eval harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marco Kotrotsos" }]
keywords = ["sql", "nlp", "agent", "llm", "anthropic", "openai", "text-to-sql", "nl2sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlglot>=25.0",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
postgres = ["psycopg[binary]>=3.1"]
all = [
    "anthropic>=0.39",
    "openai>=1.40",
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-html>=4.1",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/Kotrotsos/nl2sql"
Repository = "https://github.com/Kotrotsos/nl2sql"
Issues = "https://github.com/Kotrotsos/nl2sql/issues"

[project.scripts]
nl2sql = "nl2sql.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nl2sql*"]

[tool.setuptools.package-data]
nl2sql = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["nl2sql"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
